# ChangeLog for eix - Ebuild IndeX for portage

*eix-0.34.9
	Jan Ziak <0xe2.0x9a.0x9b at gmail.com>:
	- Use sse2 for speedup of eix-update.

*eix-0.34.8
	Martin Väth <martin at mvath.de>:
	- Fix regression of 0.34.6 (and 0.34.5): Fix override_by_map. Thanks to
	  Grzegorz Kulewski <grzegorz at kulewski.pl> for debugging help.

*eix-0.34.7
	Martin Väth <martin at mvath.de>:
	- Due to the previous 2 releases, eix --print USE is now correct.
	  Use the special variable USE.make_conf to get the previous value.

*eix-0.34.6
	Martin Väth <martin at mvath.de>:
	- Read make.conf twice: A first reading is needed to find the profile
	  paths (e.g. PORTDIR_OVERLAY). But the "main" reading must happen
	  after reading the profiles since profile variables like ARCH can be
	  used in make.conf; this seems to match portage's current behavior.
	  See the comments in https://github.com/vaeth/eix/issues/76

*eix-0.34.5
	Martin Väth <martin at mvath.de>:
	- Read make.conf after profiles https://github.com/vaeth/eix/issues/76

*eix-0.34.4
	Martin Väth <martin at mvath.de>:
	- Simplify eix.proto:
	  - Use eix_proto namespace, avoid nesting messages unnecessarily
	  - Rename the main proto to not misleadingly indicate the source
	- Minor change of the proto wire format (extension w/ deprecation) to
	  allow distinction between empty and unset/equal effective keywords
	- Manpage typo fixes, and clarify that --proto is setting independent
	- Deal with some new gcc-10 warnings and clang-10
	- Put originally missing second part of eix-0.34.3 patch into repo

*eix-0.34.3
	Martin Väth <martin at mvath.de>:
	- Fix meson build problem with sqlite + protobuf

*eix-0.34.2
	Martin Väth <martin at mvath.de>:
	- Do not require protoc for autotools --without-protobuf

*eix-0.34.1
	Martin Väth <martin at mvath.de>:
	- Rework protobuf output: Expose the actual eix-internal storage for
	  masks and stability instead of the simplification for xml. This is