@@ -33,6 +33,7 @@ Christian Heim <christian.th.heim at gmx.de>
 David Held <andukar at andukar.org>
 André Jaenisch <andre.jaenisch at openmailbox.org> (German translation fixes)
 Andrew Keyser <legoguy at turbogfx.net> (documentation)
+Andrew Kravchuk (https://github.com/lockie)
 KIMURA Masaru / hiyuh <hiyuh.root at gmail.com>
 Seemant Kulleen <seemant at gentoo.org>
 Justin Lechner <jlec at gentoo.org> (German translation fixes)
