@@ -1,5 +1,9 @@
 # ChangeLog for eix - Ebuild IndeX for portage
 
+*eix-0.34.10
+	Andrew Kravchuk (https://github.com/lockie):
+	- Make eix-remote more silent
+
 *eix-0.34.9
 	Jan Ziak <0xe2.0x9a.0x9b at gmail.com>:
 	- Use sse2 for speedup of eix-update.
